--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "@angular/cdk": "18.2.9",
     "@angular/forms": "^18.2.8",
     "@angular/material": "18.2.9",
-    "core-js": "^3.31.0",
-    "mobx": "^6.10.2"
+    "core-js": "3.38.1",
+    "mobx": "6.13.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.9",
@@ -73,13 +73,13 @@
     "@angular/platform-browser-dynamic": "^18.2.8",
     "@angular/platform-server": "^18.2.8",
     "@angular/router": "^18.2.8",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "5.1.4",
+    "@types/jasminewd2": "2.0.13",
     "@types/node": "^12.11.7",
-    "@types/rx": "2.5.34",
+    "@types/rx": "4.1.4",
     "@types/webpack": "^1.12.29",
-    "@typescript-eslint/eslint-plugin": "7.18.0",
-    "@typescript-eslint/parser": "7.18.0",
+    "@typescript-eslint/eslint-plugin": "8.10.0",
+    "@typescript-eslint/parser": "8.10.0",
     "eslint": "^8.28.0",
     "html-dnd": "1.2.0",
     "http-server": "0.9.0",
@@ -103,7 +103,7 @@
     "typedoc": "0.26.10",
     "typescript": "5.4.5",
     "uuid": "^8.2.0",
-    "zone.js": "~0.14.10"
+    "zone.js": "0.14.10"
   },
   "repository": {
     "type": "git",
