--- a/angular.json
+++ b/angular.json
@@ -85,14 +85,14 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "buildTarget": "example-app:build"
+            "browserTarget": "example-app:build"
           },
           "configurations": {
             "production": {
-              "buildTarget": "example-app:build:production"
+              "browserTarget": "example-app:build:production"
             },
             "es5": {
-              "buildTarget": "example-app:build:es5"
+              "browserTarget": "example-app:build:es5"
             }
           }
         },
@@ -217,18 +217,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "buildTarget": "docs-app:build"
+            "browserTarget": "docs-app:build"
           },
           "configurations": {
             "production": {
-              "buildTarget": "docs-app:build:production"
+              "browserTarget": "docs-app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "docs-app:build"
+            "browserTarget": "docs-app:build"
           }
         },
         "test": {
