--- a/projects/example-app/tsconfig.es5.app.json
+++ b/projects/example-app/tsconfig.es5.app.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/app",
+    "target": "es2020",
     "types": []
   },
   "files": ["src/main.ts", "src/polyfills.ts"],
