--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "module": "es2020",
     "moduleResolution": "node",
-    "target": "ES2022",
+    "target": "es2020",
     "outDir": "/dist/out-tsc",
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
@@ -12,9 +12,7 @@
     "declaration": true,
     "skipLibCheck": true,
     "stripInternal": true,
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "typeRoots": ["node_modules/@types"],
     "lib": [
       "es2017",
       "dom"
@@ -26,8 +24,7 @@
       "angular-tree-component/*": [
         "dist/angular-tree-component/*"
       ]
-    },
-    "useDefineForClassFields": false
+    }
   },
   "compileOnSave": false,
   "buildOnSave": false,
