--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ali-hm/angular-tree-component",
-  "version": "16.0.1",
+  "version": "17.0.1",
   "description": "A simple yet powerful tree component for Angular 14+",
   "author": "ali-hm",
   "homepage": "https://github.com/ali-hm/angular-tree-component",
@@ -49,38 +49,38 @@
   ],
   "contributors": [],
   "dependencies": {
-    "@angular/animations": "^16.2.12",
-    "@angular/cdk": "16.2.14",
-    "@angular/forms": "^16.2.12",
-    "@angular/material": "16.2.14",
+    "@angular/animations": "^17.3.12",
+    "@angular/cdk": "17.3.10",
+    "@angular/forms": "^17.3.12",
+    "@angular/material": "17.3.10",
     "core-js": "^3.31.0",
     "mobx": "4.14.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.16",
-    "@angular-devkit/core": "^16.2.16",
-    "@angular-eslint/builder": "16.3.1",
-    "@angular-eslint/eslint-plugin": "16.3.1",
-    "@angular-eslint/eslint-plugin-template": "16.3.1",
-    "@angular-eslint/schematics": "16.3.1",
-    "@angular-eslint/template-parser": "16.3.1",
-    "@angular/cli": "^16.2.16",
-    "@angular/common": "^16.2.12",
-    "@angular/compiler": "^16.2.12",
-    "@angular/compiler-cli": "^16.2.12",
-    "@angular/core": "^16.2.12",
-    "@angular/elements": "^16.2.12",
-    "@angular/platform-browser": "^16.2.12",
-    "@angular/platform-browser-dynamic": "^16.2.12",
-    "@angular/platform-server": "^16.2.12",
-    "@angular/router": "^16.2.12",
+    "@angular-devkit/build-angular": "^17.3.10",
+    "@angular-devkit/core": "^17.3.10",
+    "@angular-eslint/builder": "17.5.3",
+    "@angular-eslint/eslint-plugin": "17.5.3",
+    "@angular-eslint/eslint-plugin-template": "17.5.3",
+    "@angular-eslint/schematics": "17.5.3",
+    "@angular-eslint/template-parser": "17.5.3",
+    "@angular/cli": "^17.3.10",
+    "@angular/common": "^17.3.12",
+    "@angular/compiler": "^17.3.12",
+    "@angular/compiler-cli": "^17.3.12",
+    "@angular/core": "^17.3.12",
+    "@angular/elements": "^17.3.12",
+    "@angular/platform-browser": "^17.3.12",
+    "@angular/platform-browser-dynamic": "^17.3.12",
+    "@angular/platform-server": "^17.3.12",
+    "@angular/router": "^17.3.12",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.7",
     "@types/rx": "2.5.34",
     "@types/webpack": "^1.12.29",
-    "@typescript-eslint/eslint-plugin": "5.43.0",
-    "@typescript-eslint/parser": "5.43.0",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
     "eslint": "^8.28.0",
     "html-dnd": "1.2.0",
     "http-server": "0.9.0",
@@ -93,7 +93,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "lint-staged": "^10.0.7",
-    "ng-packagr": "^16.2.3",
+    "ng-packagr": "^17.3.0",
     "nightwatch": "0.9.12",
     "prettier": "^1.19.1",
     "rimraf": "^2.5.1",
@@ -101,10 +101,10 @@
     "testcafe": "^1.8.8",
     "tslib": "^2.5.3",
     "tslint": "~6.1.0",
-    "typedoc": "^0.24.8",
-    "typescript": "4.9.5",
+    "typedoc": "0.26.10",
+    "typescript": "5.4.5",
     "uuid": "^8.2.0",
-    "zone.js": "~0.13.3"
+    "zone.js": "~0.14.10"
   },
   "repository": {
     "type": "git",
