upgraded to Angular 19

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ali-hm/angular-tree-component",
-  "version": "18.0.5",
-  "description": "A simple yet powerful tree component for Angular 14+",
+  "version": "19.0.1",
+  "description": "A simple yet powerful tree component for Angular 19",
   "author": "ali-hm",
   "homepage": "https://github.com/ali-hm/angular-tree-component",
   "license": "MIT",
@@ -49,39 +49,39 @@
   ],
   "contributors": [],
   "dependencies": {
-    "@angular/animations": "^18.2.8",
-    "@angular/cdk": "18.2.9",
-    "@angular/forms": "^18.2.8",
-    "@angular/material": "18.2.9",
+    "@angular/animations": "^19.0.1",
+    "@angular/cdk": "19.0.1",
+    "@angular/forms": "^19.0.1",
+    "@angular/material": "19.0.1",
     "core-js": "^3.31.0",
     "mobx": "4.14.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.9",
-    "@angular-devkit/core": "^18.2.9",
-    "@angular-eslint/builder": "18.3.1",
-    "@angular-eslint/eslint-plugin": "18.3.1",
-    "@angular-eslint/eslint-plugin-template": "18.3.1",
-    "@angular-eslint/schematics": "18.3.1",
-    "@angular-eslint/template-parser": "18.3.1",
-    "@angular/cli": "^18.2.9",
-    "@angular/common": "^18.2.8",
-    "@angular/compiler": "^18.2.8",
-    "@angular/compiler-cli": "^18.2.8",
-    "@angular/core": "^18.2.8",
-    "@angular/elements": "^18.2.8",
-    "@angular/platform-browser": "^18.2.8",
-    "@angular/platform-browser-dynamic": "^18.2.8",
-    "@angular/platform-server": "^18.2.8",
-    "@angular/router": "^18.2.8",
+    "@angular-devkit/build-angular": "^19.0.2",
+    "@angular-devkit/core": "^19.0.2",
+    "@angular-eslint/builder": "19.0.0",
+    "@angular-eslint/eslint-plugin": "19.0.0",
+    "@angular-eslint/eslint-plugin-template": "19.0.0",
+    "@angular-eslint/schematics": "19.0.0",
+    "@angular-eslint/template-parser": "19.0.0",
+    "@angular/cli": "^19.0.2",
+    "@angular/common": "^19.0.1",
+    "@angular/compiler": "^19.0.1",
+    "@angular/compiler-cli": "^19.0.1",
+    "@angular/core": "^19.0.1",
+    "@angular/elements": "^19.0.1",
+    "@angular/platform-browser": "^19.0.1",
+    "@angular/platform-browser-dynamic": "^19.0.1",
+    "@angular/platform-server": "^19.0.1",
+    "@angular/router": "^19.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.7",
     "@types/rx": "4.1.4",
     "@types/webpack": "^1.12.29",
-    "@typescript-eslint/eslint-plugin": "7.18.0",
-    "@typescript-eslint/parser": "7.18.0",
-    "eslint": "^8.28.0",
+    "@typescript-eslint/eslint-plugin": "8.17.0",
+    "@typescript-eslint/parser": "8.17.0",
+    "eslint": "9.16.0",
     "html-dnd": "1.2.0",
     "http-server": "0.9.0",
     "husky": "^4.2.3",
@@ -93,7 +93,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "lint-staged": "^10.0.7",
-    "ng-packagr": "^18.2.1",
+    "ng-packagr": "^19.0.1",
     "nightwatch": "0.9.12",
     "prettier": "^1.19.1",
     "rimraf": "^2.5.1",
@@ -102,9 +102,9 @@
     "tslib": "^2.5.3",
     "tslint": "~6.1.0",
     "typedoc": "0.26.10",
-    "typescript": "5.4.5",
+    "typescript": "5.6.3",
     "uuid": "^8.2.0",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.15.0"
   },
   "repository": {
     "type": "git",
@@ -114,7 +114,7 @@
     "url": "https://github.com/ali-hm/angular-tree-component/issues"
   },
   "engines": {
-    "node": ">=10.21.0"
+    "node": ">=22.3.0"
   },
   "prettier": {
     "printWidth": 80,
