--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,7 +49,8 @@
         ],
         "@angular-eslint/no-output-rename": [
           "off"
-        ]
+        ],
+        "@angular-eslint/prefer-standalone": "off"
       }
     },
     {
