--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ali-hm/angular-tree-component",
-  "version": "19.0.1",
+  "version": "19.1.0",
   "description": "A simple yet powerful tree component for Angular 19",
   "author": "ali-hm",
   "homepage": "https://github.com/ali-hm/angular-tree-component",
@@ -49,31 +49,31 @@
   ],
   "contributors": [],
   "dependencies": {
-    "@angular/animations": "^19.0.1",
-    "@angular/cdk": "19.0.1",
-    "@angular/forms": "^19.0.1",
-    "@angular/material": "19.0.1",
+    "@angular/animations": "^19.1.1",
+    "@angular/cdk": "19.1.0",
+    "@angular/forms": "^19.1.1",
+    "@angular/material": "19.1.0",
     "core-js": "^3.31.0",
     "mobx": "4.14.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.2",
-    "@angular-devkit/core": "^19.0.2",
-    "@angular-eslint/builder": "19.0.0",
-    "@angular-eslint/eslint-plugin": "19.0.0",
-    "@angular-eslint/eslint-plugin-template": "19.0.0",
-    "@angular-eslint/schematics": "19.0.0",
-    "@angular-eslint/template-parser": "19.0.0",
-    "@angular/cli": "^19.0.2",
-    "@angular/common": "^19.0.1",
-    "@angular/compiler": "^19.0.1",
-    "@angular/compiler-cli": "^19.0.1",
-    "@angular/core": "^19.0.1",
-    "@angular/elements": "^19.0.1",
-    "@angular/platform-browser": "^19.0.1",
-    "@angular/platform-browser-dynamic": "^19.0.1",
-    "@angular/platform-server": "^19.0.1",
-    "@angular/router": "^19.0.1",
+    "@angular-devkit/build-angular": "^19.1.2",
+    "@angular-devkit/core": "^19.1.2",
+    "@angular-eslint/builder": "19.0.2",
+    "@angular-eslint/eslint-plugin": "19.0.2",
+    "@angular-eslint/eslint-plugin-template": "19.0.2",
+    "@angular-eslint/schematics": "19.0.2",
+    "@angular-eslint/template-parser": "19.0.2",
+    "@angular/cli": "^19.1.2",
+    "@angular/common": "^19.1.1",
+    "@angular/compiler": "^19.1.1",
+    "@angular/compiler-cli": "^19.1.1",
+    "@angular/core": "^19.1.1",
+    "@angular/elements": "^19.1.1",
+    "@angular/platform-browser": "^19.1.1",
+    "@angular/platform-browser-dynamic": "^19.1.1",
+    "@angular/platform-server": "^19.1.1",
+    "@angular/router": "^19.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.7",
@@ -93,7 +93,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "lint-staged": "^10.0.7",
-    "ng-packagr": "^19.0.1",
+    "ng-packagr": "19.1.0",
     "nightwatch": "0.9.12",
     "prettier": "^1.19.1",
     "rimraf": "^2.5.1",
