--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ali-hm/angular-tree-component",
-  "version": "19.1.0",
+  "version": "19.1.2",
   "description": "A simple yet powerful tree component for Angular 19",
   "author": "ali-hm",
   "homepage": "https://github.com/ali-hm/angular-tree-component",
@@ -49,59 +49,59 @@
   ],
   "contributors": [],
   "dependencies": {
-    "@angular/animations": "^19.1.1",
-    "@angular/cdk": "19.1.0",
-    "@angular/forms": "^19.1.1",
-    "@angular/material": "19.1.0",
-    "core-js": "^3.31.0",
+    "@angular/animations": "^19.1.4",
+    "@angular/cdk": "19.1.2",
+    "@angular/forms": "^19.1.4",
+    "@angular/material": "19.1.2",
+    "core-js": "3.40.0",
     "mobx": "4.14.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.2",
-    "@angular-devkit/core": "^19.1.2",
+    "@angular-devkit/build-angular": "^19.1.5",
+    "@angular-devkit/core": "^19.1.5",
     "@angular-eslint/builder": "19.0.2",
     "@angular-eslint/eslint-plugin": "19.0.2",
     "@angular-eslint/eslint-plugin-template": "19.0.2",
     "@angular-eslint/schematics": "19.0.2",
     "@angular-eslint/template-parser": "19.0.2",
-    "@angular/cli": "^19.1.2",
-    "@angular/common": "^19.1.1",
-    "@angular/compiler": "^19.1.1",
-    "@angular/compiler-cli": "^19.1.1",
-    "@angular/core": "^19.1.1",
-    "@angular/elements": "^19.1.1",
-    "@angular/platform-browser": "^19.1.1",
-    "@angular/platform-browser-dynamic": "^19.1.1",
-    "@angular/platform-server": "^19.1.1",
-    "@angular/router": "^19.1.1",
-    "@types/jasmine": "~3.6.0",
+    "@angular/cli": "^19.1.5",
+    "@angular/common": "^19.1.4",
+    "@angular/compiler": "^19.1.4",
+    "@angular/compiler-cli": "^19.1.4",
+    "@angular/core": "^19.1.4",
+    "@angular/elements": "^19.1.4",
+    "@angular/platform-browser": "^19.1.4",
+    "@angular/platform-browser-dynamic": "^19.1.4",
+    "@angular/platform-server": "^19.1.4",
+    "@angular/router": "^19.1.4",
+    "@types/jasmine": "5.1.5",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.7",
     "@types/rx": "4.1.4",
     "@types/webpack": "^1.12.29",
-    "@typescript-eslint/eslint-plugin": "8.17.0",
-    "@typescript-eslint/parser": "8.17.0",
-    "eslint": "9.16.0",
-    "html-dnd": "1.2.0",
-    "http-server": "0.9.0",
+    "@typescript-eslint/eslint-plugin": "8.23.0",
+    "@typescript-eslint/parser": "8.23.0",
+    "eslint": "9.19.0",
+    "html-dnd": "1.2.1",
+    "http-server": "14.1.1",
     "husky": "^4.2.3",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-core": "5.5.0",
+    "jasmine-spec-reporter": "7.0.0",
     "karma": "~6.4.2",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma-chrome-launcher": "3.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "lint-staged": "^10.0.7",
-    "ng-packagr": "19.1.0",
-    "nightwatch": "0.9.12",
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "2.1.0",
+    "lint-staged": "15.4.3",
+    "ng-packagr": "19.1.2",
+    "nightwatch": "3.11.0",
     "prettier": "^1.19.1",
-    "rimraf": "^2.5.1",
-    "rxjs": "^6.5.3",
+    "rimraf": "6.0.1",
+    "rxjs": "7.8.1",
     "testcafe": "^1.8.8",
     "tslib": "^2.5.3",
     "tslint": "~6.1.0",
-    "typedoc": "0.26.10",
+    "typedoc": "0.27.6",
     "typescript": "5.6.3",
     "uuid": "^8.2.0",
     "zone.js": "~0.15.0"
