--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ali-hm/angular-tree-component",
-  "version": "19.2.5",
+  "version": "20.0.3",
   "description": "A simple yet powerful tree component for Angular 19",
   "author": "ali-hm",
   "homepage": "https://github.com/ali-hm/angular-tree-component",
@@ -49,43 +49,43 @@
   ],
   "contributors": [],
   "dependencies": {
-    "@angular/animations": "^19.2.5",
-    "@angular/cdk": "19.2.8",
-    "@angular/forms": "^19.2.5",
-    "@angular/material": "19.2.8",
-    "core-js": "3.41.0",
+    "@angular/animations": "^20.0.3",
+    "@angular/cdk": "20.0.3",
+    "@angular/forms": "^20.0.3",
+    "@angular/material": "20.0.3",
+    "core-js": "3.43.0",
     "mobx": "4.14.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.6",
-    "@angular-devkit/core": "^19.2.6",
-    "@angular-eslint/builder": "19.3.0",
-    "@angular-eslint/eslint-plugin": "19.3.0",
-    "@angular-eslint/eslint-plugin-template": "19.3.0",
-    "@angular-eslint/schematics": "19.3.0",
-    "@angular-eslint/template-parser": "19.3.0",
-    "@angular/cli": "^19.2.6",
-    "@angular/common": "^19.2.5",
-    "@angular/compiler": "^19.2.5",
-    "@angular/compiler-cli": "^19.2.5",
-    "@angular/core": "^19.2.5",
-    "@angular/elements": "^19.2.5",
-    "@angular/platform-browser": "^19.2.5",
-    "@angular/platform-browser-dynamic": "^19.2.5",
-    "@angular/platform-server": "^19.2.5",
-    "@angular/router": "^19.2.5",
-    "@types/jasmine": "5.1.7",
+    "@angular-devkit/build-angular": "^20.0.2",
+    "@angular-devkit/core": "^20.0.2",
+    "@angular-eslint/builder": "20.0.0",
+    "@angular-eslint/eslint-plugin": "20.0.0",
+    "@angular-eslint/eslint-plugin-template": "20.0.0",
+    "@angular-eslint/schematics": "20.0.0",
+    "@angular-eslint/template-parser": "20.0.0",
+    "@angular/cli": "^20.0.2",
+    "@angular/common": "^20.0.3",
+    "@angular/compiler": "^20.0.3",
+    "@angular/compiler-cli": "^20.0.3",
+    "@angular/core": "^20.0.3",
+    "@angular/elements": "^20.0.3",
+    "@angular/platform-browser": "^20.0.3",
+    "@angular/platform-browser-dynamic": "^20.0.3",
+    "@angular/platform-server": "^20.0.3",
+    "@angular/router": "^20.0.3",
+    "@types/jasmine": "5.1.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "22.14.0",
     "@types/rx": "4.1.4",
     "@types/webpack": "^1.12.29",
-    "@typescript-eslint/eslint-plugin": "8.29.0",
-    "@typescript-eslint/parser": "8.29.0",
-    "eslint": "9.24.0",
+    "@typescript-eslint/eslint-plugin": "8.34.0",
+    "@typescript-eslint/parser": "8.34.0",
+    "eslint": "9.29.0",
     "html-dnd": "1.2.1",
     "http-server": "14.1.1",
     "husky": "^4.2.3",
-    "jasmine-core": "5.6.0",
+    "jasmine-core": "5.8.0",
     "jasmine-spec-reporter": "7.0.0",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "3.2.0",
@@ -93,18 +93,18 @@
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
     "lint-staged": "15.5.0",
-    "ng-packagr": "19.2.1",
-    "nightwatch": "3.12.1",
+    "ng-packagr": "20.0.0",
+    "nightwatch": "3.12.2",
     "prettier": "^1.19.1",
     "rimraf": "6.0.1",
     "rxjs": "7.8.2",
     "testcafe": "^1.8.8",
     "tslib": "^2.5.3",
     "tslint": "~6.1.0",
-    "typedoc": "0.28.1",
-    "typescript": "5.6.3",
+    "typedoc": "0.28.5",
+    "typescript": "5.8.3",
     "uuid": "11.1.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "0.15.1"
   },
   "repository": {
     "type": "git",
