--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ali-hm/angular-tree-component",
-  "version": "20.1.6",
-  "description": "A simple yet powerful tree component for Angular 19",
+  "version": "20.1.7",
+  "description": "angular-tree-component fork",
   "author": "ali-hm",
   "homepage": "https://github.com/ali-hm/angular-tree-component",
   "license": "MIT",
