--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ali-hm/angular-tree-component",
-  "version": "20.1.7",
+  "name": "angular-tree-component",
+  "version": "20.1.8",
   "description": "angular-tree-component fork",
   "author": "ali-hm",
   "homepage": "https://github.com/ali-hm/angular-tree-component",
@@ -108,7 +108,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ali-hm/angular-tree-component.git"
+    "url": "git+https://github.com/isiparts/angular-tree-component.git"
   },
   "bugs": {
     "url": "https://github.com/ali-hm/angular-tree-component/issues"
