--- a/projects/angular-tree-component/package.json
+++ b/projects/angular-tree-component/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-tree-component",
-  "version": "20.1.8",
+  "name": "angular-tree-component-isi",
+  "version": "20.1.9",
   "description": "angular-tree-component fork",
   "author": "ali-hm",
   "homepage": "https://github.com/ali-hm/angular-tree-component",
