--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-tree-component-isi",
-  "version": "20.1.9",
+  "name": "@ali-hm/angular-tree-component",
+  "version": "20.1.10",
   "description": "angular-tree-component fork",
   "author": "ali-hm",
   "homepage": "https://github.com/ali-hm/angular-tree-component",
