--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-tree-component-isi",
-  "version": "20.2.1",
+  "version": "20.3.0",
   "description": "angular-tree-component fork",
   "author": "ali-hm",
   "homepage": "https://github.com/isiparts/angular-tree-component",
@@ -50,31 +50,31 @@
   ],
   "contributors": [],
   "dependencies": {
-    "@angular/animations": "^20.1.6",
-    "@angular/cdk": "20.1.5",
-    "@angular/forms": "^20.1.6",
-    "@angular/material": "20.1.5",
+    "@angular/animations": "^19.2.0",
+    "@angular/cdk": "^19.2.0",
+    "@angular/forms": "^19.2.0",
+    "@angular/material": "^19.2.0",
     "core-js": "3.45.0",
     "mobx": "4.14.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.1.5",
-    "@angular-devkit/core": "^20.1.5",
-    "@angular-eslint/builder": "20.1.1",
-    "@angular-eslint/eslint-plugin": "20.1.1",
-    "@angular-eslint/eslint-plugin-template": "20.1.1",
-    "@angular-eslint/schematics": "20.1.1",
-    "@angular-eslint/template-parser": "20.1.1",
-    "@angular/cli": "^20.1.5",
-    "@angular/common": "^20.1.6",
-    "@angular/compiler": "^20.1.6",
-    "@angular/compiler-cli": "^20.1.6",
-    "@angular/core": "^20.1.6",
-    "@angular/elements": "^20.1.6",
-    "@angular/platform-browser": "^20.1.6",
-    "@angular/platform-browser-dynamic": "^20.1.6",
-    "@angular/platform-server": "^20.1.6",
-    "@angular/router": "^20.1.6",
+    "@angular-devkit/build-angular": "^19.2.0",
+    "@angular-devkit/core": "^19.2.0",
+    "@angular-eslint/builder": "^19.2.0",
+    "@angular-eslint/eslint-plugin": "^19.2.0",
+    "@angular-eslint/eslint-plugin-template": "^19.2.0",
+    "@angular-eslint/schematics": "^19.2.0",
+    "@angular-eslint/template-parser": "^19.2.0",
+    "@angular/cli": "^19.2.0",
+    "@angular/common": "^19.2.0",
+    "@angular/compiler": "^19.2.0",
+    "@angular/compiler-cli": "^19.2.0",
+    "@angular/core": "^19.2.0",
+    "@angular/elements": "^19.2.0",
+    "@angular/platform-browser": "^19.2.0",
+    "@angular/platform-browser-dynamic": "^19.2.0",
+    "@angular/platform-server": "^19.2.0",
+    "@angular/router": "^19.2.0",
     "@types/jasmine": "5.1.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "22.14.0",
@@ -94,7 +94,7 @@
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
     "lint-staged": "15.5.0",
-    "ng-packagr": "20.1.0",
+    "ng-packagr": "^20.0.0",
     "nightwatch": "3.12.2",
     "prettier": "^1.19.1",
     "rimraf": "6.0.1",
