--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-tree-component-isi",
-  "version": "20.3.0",
+  "version": "20.3.1",
   "description": "angular-tree-component fork",
   "author": "ali-hm",
   "homepage": "https://github.com/isiparts/angular-tree-component",
@@ -43,7 +43,7 @@
     "publish:release": "npm publish ./dist/angular-tree-component --access=public",
     "publish:next": "npm publish ./dist/angular-tree-component --tag next --access=public",
     "pack": "npm pack ./dist/angular-tree-component --pack-destination=\"./pack\"",
-    "packagr": "ng-packagr -p projects/angular-tree-component/ng-package.json"
+    "packagr": "npm run build &&ng-packagr -p projects/angular-tree-component/ng-package.json"
   },
   "files": [
     "dist/"
